# kinect

./: .gitignore  README.md  config.json  cropped_1.json  main.py
camera_service/: CMakeLists.txt  MultiDeviceCapturer.h  utils.h
green_screen/: CMakeLists.txt  calibration.cpp  calibration.h  main.cpp  transformation.h  utils.cpp
